<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_add_ideogram"
          android:icon="@drawable/ic_action_new"
          android:title="@string/menu_add_ideogram"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_edit_ideogram"
          android:icon="@drawable/ic_action_edit"
          android:title="@string/menu_edit_ideogram"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_paste"
          android:icon="@drawable/ic_action_paste"
          android:title="@string/menu_paste"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_preferences"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/menu_preferences"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_backup"
          android:icon="@drawable/ic_action_save"
          android:title="@string/menu_backup"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_restore"
          android:icon="@drawable/ic_action_restore"
          android:title="@string/menu_restore"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_help"
          android:title="@string/menu_help"
        android:showAsAction="never" />
    <item android:id="@+id/menu_item_history"
          android:title="@string/menu_history"
        android:showAsAction="never" />
    <item android:id="@+id/menu_item_log"
          android:title="@string/menu_log"
        android:showAsAction="never" />
</menu>