<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:clickable="true">

     <TextView
         android:id="@+id/enter_filename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/dialog_message_backup_save_as"
         android:singleLine="false"
         android:textSize="18sp" />

     <ListView android:id="@id/android:list"
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:cacheColorHint="@color/jabtalkWhite"
               android:layout_weight="1" />

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">

          <Button android:id="@+id/btn_cancel"
              android:text="@string/button_cancel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dp"
              android:minWidth="110dp"/>

          <Button android:id="@+id/btn_save"
              android:text="@string/button_ok"
              android:layout_width="wrap_content"
              android:minWidth="110dp"
              android:layout_height="wrap_content" />


     </LinearLayout>
  
</LinearLayout>
