<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/manage_challenge_layout"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  
		 	
	 <TextView
	 	android:id="@+id/lock_message"
	 	android:layout_width="wrap_content"
	 	android:layout_height="wrap_content"
	 	android:layout_gravity="center_horizontal"
	 	android:layout_marginLeft="10dp"
	 	android:layout_marginRight="10dp"
		 android:maxLines="1"
	 	android:textSize="18sp" />
		 	
  	
	<EditText
		android:id="@+id/lock_answer"
		android:layout_width="80dp"  
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:gravity="center"
		android:inputType="number"
		android:maxLength="4"
		android:textSize="17sp" />
		
	<TextView
	 	android:id="@+id/lock_incorrect"
	 	android:layout_width="wrap_content"
	 	android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
	 	android:layout_marginLeft="10dp"
	 	android:layout_marginRight="10dp"
		android:text="@string/dialog_message_manage_challenge_incorrect"
	 	android:textColor="@color/jabtalkRed"
		android:textSize="17sp"
	 	android:textStyle="bold"
	 	android:visibility="gone"/>
	 	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="20dp"
		android:orientation="horizontal">							

		<Button android:id="@+id/btn_cancel" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:minWidth="110dp"
			android:text="@string/button_cancel" />
			    			
		<Button android:id="@+id/btn_unlock" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minWidth="110dp"
			android:text="@string/button_ok" />
			
						
	</LinearLayout>			 	
			
</LinearLayout>
