<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/backup_save_layout"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  
		 	
	 <TextView
	 	android:id="@+id/enter_filename"
	 	android:layout_width="wrap_content"
	 	android:layout_height="wrap_content"
	 	android:layout_gravity="center_horizontal"
	 	android:layout_marginLeft="10dp"
	 	android:layout_marginRight="10dp"
	 	android:text="@string/dialog_message_backup_save_as"
		android:singleLine="false"
	 	android:textSize="18sp" />
		 	

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal"
		android:layout_marginTop="30dp">

	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal">

		<EditText
			android:id="@+id/backup_filename"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:textSize="17sp"
			android:inputType="text"
			android:singleLine="true"
			android:minWidth="250dp"
			android:maxLength="100" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/backup_filename"
			android:textSize="17sp"
			android:text=".bak"
			android:layout_alignBaseline="@id/backup_filename" />
	</RelativeLayout>
		</LinearLayout>
	 	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="20dp"
		android:orientation="horizontal">							

		<Button android:id="@+id/btn_cancel" 
			android:text="@string/button_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:minWidth="110dp"/>
			    			
		<Button android:id="@+id/btn_save"
			android:text="@string/button_ok"
			android:layout_width="wrap_content"
			android:minWidth="110dp"					
			android:layout_height="wrap_content" />


	</LinearLayout>
			
</LinearLayout>
